[update] 강화학습 봇 train 구현 및 테스트 완료

--- a/data/data.ipynb
+++ b/data/data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,37 +26,23 @@
    "metadata": {},
    "source": [
     "* samsung : '000210'\n",
-    "* date    : 20150101 ~ 20221220"
+    "* hyundai : '005380'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "samsung = fdr.DataReader('000210', start='20150101', end='20221220')\n",
     "samsung.reset_index(inplace=True, )\n",
-    "samsung.to_csv('000210.csv', header=True, index=False)\n",
+    "samsung.iloc[:, :-1].to_csv('005930.csv', header=True, index=False)\n",
     "\n",
-    "hyundai = fdr.DataReader('000210', start='20150101', end='20221220')\n",
+    "hyundai = fdr.DataReader('005380', start='20150101', end='20221220')\n",
     "hyundai.reset_index(inplace=True, )\n",
-    "hyundai.to_csv('005380.csv', header=True, index=False)"
+    "hyundai.iloc[:, :-1].to_csv('005380.csv', header=True, index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -82,7 +68,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 | packaged by conda-forge | (main, Nov 24 2022, 14:07:00) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
